# ManusClaw

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_NOTES.md  LICENSE  README.md  build_desktop.sh  build_release.py  config.toml  docker-compose.yml  index.html  install.ps1  install.sh  main.py  manusclaw_inject.sh  pyproject.toml  requirements.txt  run_flow.py  run_mcp.py  run_mcp_server.py  run_multi_agent.py  run_server.py  setup-termux.sh
app/: cli.py  config.py  cron.py  exceptions.py  logger.py  multi_agent.py  schema.py  session_tools.py  ssh_server.py  task_queue.py
app/agent/: base.py  browser.py  data_analysis.py  identity_guard.py  manus.py  mcp.py  orchestrator.py  react.py  router.py  toolcall.py
app/agent/roles/: __init__.py  architect.py  base_role.py  engineer.py  product_manager.py  qa.py
app/automation/: __init__.py  email_tool.py  gmail.py
app/canvas/: __init__.py  a2ui.py  server.py  tool.py
app/db/: __init__.py  session.py
app/desktop/: __init__.py  main.py
app/flow/: planning.py
app/llm/: bedrock_client.py  credential_pool.py  llm.py  mistral_client.py  offline_router.py  profile_rotation.py  secret_redaction.py  token_tracker.py
app/mcp/: client.py  server.py
app/memory/: __init__.py  long_term.py  short_term.py
app/messaging/: __init__.py  base.py  discord.py  email.py  gateway.py  google_chat.py  irc.py  matrix.py  signal.py  slack.py  teams.py  telegram.py  twitch.py  webchat.py  whatsapp.py
app/nodes/: __init__.py  manager.py  protocol.py
app/permissions/: __init__.py  gate.py
app/sandbox/: __init__.py  docker.py  factory.py  openshell.py  ssh.py
app/server/: main.py  webhook_router.py  webhooks.py
app/server/static/: canvas.html  chat.html
app/skills/: __init__.py  skill_engine.py
app/skills/builtin/: coding.md  data_analysis.md  devops.md  github.md  mlops.md  research.md
app/ssh/: __init__.py  shell.py
app/tool/: ask_human.py  base.py  bash.py  browser_use_tool.py  crawl4ai.py  cross_session_search.py  data_viz.py  delegate.py  image_gen.py  memory_tool.py  node_execute.py  planning.py  platform_control.py  python_execute.py  selector.py  skill_manager.py  str_replace_editor.py  terminate.py  web_search.py
app/voice/: __init__.py  talk.py  tts.py  wake.py
demo/: vijay-landing.html
desktop/macos/: README.md  menubar.py
desktop/mobile/: README.md  node_client.py
desktop/windows_hub/: README.md  hub.py
docs/: ARCHITECTURE.md  CONFIG.md  FEATURES.md  LOGGER.md  PROVIDERS.md  README.md  REFACTORING.md
docs/features/: agent-router.md  canvas-nodes.md  canvas.md  companion.md  gmail.md  irc.md  matrix.md  profile-rotation.md  sandbox.md  ssh.md  voice.md  webchat.md  webhooks.md  whatsapp.md
providers/: 7llm.toml  README.md  ollama-cloud.toml  ollama.toml  opencode.toml  openrouter.toml  pollinations.toml
tests/: conftest.py  test_agent_loop.py  test_agent_router.py  test_canvas.py  test_credential_pool.py  test_credential_rotation.py  test_cron.py  test_cron_enhanced.py  test_messaging.py  test_messaging_channels.py  test_nodes.py  test_paorr.py  test_profile_rotation.py  test_sandbox.py  test_session_db.py  test_session_tools.py  test_skills.py  test_ssh.py  test_tool_dispatch.py  test_voice.py  test_webhooks.py
