[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manusclaw"
version = "4.0.0"
description = "ManusClaw: Production-grade autonomous AI agent framework by The-JDdev"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "The-JDdev (SHS Shobuj)" }]

dependencies = [
    "pydantic>=2.7,<3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "openai>=1.30",
    "anthropic>=0.28",
    "aiohttp>=3.9",
    "duckduckgo-search>=6.2",
    "playwright>=1.44",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "croniter>=2.0",
]

[project.optional-dependencies]
mistral = ["mistralai>=1.0"]
bedrock = ["boto3>=1.34"]
google = ["google-generativeai>=0.7"]
browser = ["crawl4ai>=0.3"]
viz = ["matplotlib>=3.9", "mpld3>=0.5.10"]
ollama = ["ollama>=0.2.0"]
all = ["manusclaw[mistral,bedrock,google,browser,viz,ollama]"]

[project.scripts]
manusclaw = "app.cli:main"
manusclaw-server = "app.server.main:serve"
manusclaw-cron = "app.cron:main"
manusclaw-multi = "app.multi_agent:run_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-n 4 --tb=short -q"

[tool.coverage.run]
source = ["app"]
omit = ["app/desktop/*", "tests/*"]
